Мемориал на карте

--- a/stands/victorious.html
+++ b/stands/victorious.html
@@ -10,6 +10,7 @@
     <script>var topicName='Победный Нижний';var topicCategory='stand';var topicId='victorious'</script>
     <script src="../js/common.js"></script>
     <script src="../js/topic.js"></script>
+    <script src="../js/spoiler.js"></script>
     <link rel="stylesheet" href="../css/topic.min.css">
     <title>Победный Нижний - Исторический зал</title>
 </head>
@@ -81,6 +82,12 @@
                 <div class="chapter" id="memory" data-chapter="Память">
                     <p>К 30-летию Победы у стен Кремля был открыт мемориал "Горьковчане - фронту".</p>
                     <img data-label="Мемориал &quot;Горьковчане - фронту&quot;"/>
+                    <div class="spoiler piece" data-for="memory_map">
+                        <div class="spoiler-header spoiler-header-inactive" data-name="Мемориал &quot;Горьковчане - фронту&quot; на карте"></div>
+                        <div class="injection" id="memory_map">
+                            <iframe class="iframe-injection" data-from="https://yandex.ru/map-widget/v1/-/CGxYBImD"></iframe>
+                        </div>
+                    </div>
                 </div>
                 <br>
             </div>
