--- a/centuries/xv.html
+++ b/centuries/xv.html
@@ -10,6 +10,7 @@
     <script>var topicName='XV век';var topicCategory='century';var topicId='xv'</script>
     <script src="../js/common.js"></script>
     <script src="../js/topic.js"></script>
+    <script src="../js/spoiler.js"></script>
     <link rel="stylesheet" href="../css/topic.min.css">
     <title>XV век - Исторический зал</title>
 </head>
@@ -67,6 +68,12 @@
                     <p>В 1414 году присоединение Нижнего Новгорода к Москве было окончательно закреплено походом Великого князя Московского Юрия Дмитриевича. Князь "не сътвори зла ничтоже" его жителям, за что получил признание и уважение горожан.</p>
                     <p>В 1434 году заложен Свято-Троице-Макарьево-Желтоводский монастырь, в котором впоследствии будет обучаться патриарх Никон.</p>
                     <img data-label="Свято-Троице-Макарьево-Желтоводский монастырь. Наши дни"/>
+                    <div class="spoiler piece" data-for="monastery_map">
+                        <div class="spoiler-header spoiler-header-inactive" data-name="Свято-Троице-Макарьево-Желтоводский монастырь на карте"></div>
+                        <div class="injection" id="monastery_map">
+                            <iframe class="iframe-injection" data-from="https://yandex.ru/map-widget/v1/-/CGxYBN3L"></iframe>
+                        </div>
+                    </div>
                     <p>В 1445 году город был взят войсками казанского хана Улу-Мухаммеда.</p>
                 </div>
                 <div class="chapter" id="bridge" data-chapter="Пограничный мост">
