--- a/centuries/xvii.html
+++ b/centuries/xvii.html
@@ -10,6 +10,7 @@
     <script>var topicName='XVII век';var topicCategory='century';var topicId='xvii'</script>
     <script src="../js/common.js"></script>
     <script src="../js/topic.js"></script>
+    <script src="../js/spoiler.js"></script>
     <link rel="stylesheet" href="../css/topic.min.css">
     <title>XVII век - Исторический зал</title>
 </head>
@@ -70,6 +71,12 @@
                     <img data-label="Изгнание поляков из Кремля"/>
                     <p>В 1818 году в Москве был открыт памятник купцу Кузьме Минину и князю Дмитрию Пожарскому. В 2005 году в Нижнем Новгороде была открыта уменьшенная копия московского памятника. В 2004 году 4 ноября 1612 года было объявлено государственным праздником - Днем народного единства.</p>
                     <img data-label="Памятник Минину и Пожарскому: в Москве (слева) и в Нижнем Новгороде (справа)"/>
+                    <div class="spoiler piece" data-for="monument_map">
+                        <div class="spoiler-header spoiler-header-inactive" data-name="Нижегородский памятник Минину и Пожарскому на карте"></div>
+                        <div class="injection" id="monument_map">
+                            <iframe class="iframe-injection" data-from="https://yandex.ru/map-widget/v1/-/CGxYB0OY"></iframe>
+                        </div>
+                    </div>
                 </div>
                 <div class="chapter" id="church_schism" data-chapter="Церковный раскол">
                     <p>Церковный раскол был одним из главных событий в России в XVII веке. Уроженец Нижнего Новгорода Никон при поддержке царя Алексея Михайловича становится Патриархом Московским и всея Руси в 1652 году. На Московском соборе 1654 года он, опять же при поддержке царя, принимает решение провести церковную реформу, направленную на внесение изменений в богослужебные книги московской печати и некоторые обряды в целях их унификации с современными греческими.</p>
