--- a/stands/theatrical.html
+++ b/stands/theatrical.html
@@ -10,6 +10,7 @@
     <script>var topicName='Театральный Нижний';var topicCategory='stand';var topicId='theatrical'</script>
     <script src="../js/common.js"></script>
     <script src="../js/topic.js"></script>
+    <script src="../js/spoiler.js"></script>
     <link rel="stylesheet" href="../css/topic.min.css">
     <title>Театральный Нижний - Исторический зал</title>
 </head>
@@ -72,6 +73,12 @@
                     <p>С 1928 по 1945 год был поставлен 191 новый спектакль, из них советские пьесы составили 102 спектакля, русская классика — 62 спектакля, западноевропейская классика - 22 и пьесы современных зарубежных авторов - 5 спектаклей.</p>
                     <p>В 1948 году Нижегородскому государственному театру драмы было присвоено имя Максима Горького, а в 1949 году в связи со 150-летием со дня основания театр награждён орденом Трудового Красного Знамени. В 1968 году театру присвоено звание "академический" — второму из периферийных театров России.</p>
                     <img data-label="Наши дни"/>
+                    <div class="spoiler piece" data-for="drama_theatre_map">
+                        <div class="spoiler-header spoiler-header-inactive" data-name="Нижегородский театр драмы на карте"></div>
+                        <div class="injection" id="drama_theatre_map">
+                            <iframe class="iframe-injection" data-from="https://yandex.ru/map-widget/v1/-/CGt~MK~N"></iframe>
+                        </div>
+                    </div>
                 </div>
                 <div class="chapter" id="pushkin_theatre" data-chapter="Нижегородский театр оперы и балета имени А. С. Пушкина">
                     <p>Нижегородский театр оперы и балета имени А. С. Пушкина был основан в 1935 году как Горьковский театр оперы и балета. В зрительном зале 1152 места.</p>
@@ -79,6 +86,12 @@
                     <p>Постановление об организации в городе оперного театра было принято Горсоветом в 1931 году. Под театр было решено перестроить здание Народного дома. Народный дом был построен в 1903 году по инициативе Общества распространения начального образования в Нижегородской губернии при содействии М. Горького. Он был задуман как "очаг культуры" в губернском городе.</p>
                     <p>К 24 октября 1935 года театр подготовил своё первое представление — оперу А. Бородина "Князь Игорь". Открывать сезон этим произведением стало традицией.</p>
                     <p>10 февраля 1937 года театр был назван именем А. С. Пушкина. В 1994 году получил звание "академический".</p>
+                    <div class="spoiler piece" data-for="pushkin_theatre_map">
+                        <div class="spoiler-header spoiler-header-inactive" data-name="Нижегородский театр оперы и балета на карте"></div>
+                        <div class="injection" id="pushkin_theatre_map">
+                            <iframe class="iframe-injection" data-from="https://yandex.ru/map-widget/v1/-/CGxYFN6U"></iframe>
+                        </div>
+                    </div>
                 </div>
                 <div class="chapter" id="young_spectator" data-chapter="Нижегородский государственный театр юного зрителя">
                     <p>Нижегородский государственный ордена "Знак Почета" театр юного зрителя создан по инициативе известного нижегородского актёра, режиссёра Н. И. Собольщикова-Самарина в 1927 году. Театр открылся 28 ноября 1928 года спектаклем "Недоросль" Д.Фонвизина. Возглавил театр заслуженный деятель искусств РФ, режиссер Е. Брилль. Заведовать музыкальной частью стал тогда еще начинающий (а в последствие известный композитор России) А. Касьянов, художником театра был назначен Г. Кигель. У молодого театра не было тогда ещё ни своей сцены, ни своего здания. Первые спектакли игрались на сцене Нижегородского театра Драмы.</p>
@@ -88,6 +101,12 @@
                     <p>Для показа экспериментальных постановок и спектаклей "малой формы" 22 октября 1986 года открылась малая сцена театра. Она отличается особой атмосферой камерности, зритель и актер смотрят друг другу "глаза в глаза", нет большого пространства, разделяющего их. От этого спектакли воспринимаются иначе, нежели в привычных залах.</p>
                     <p>Все эти годы театр старался сохранить лучшие традиции, поэтому в его афише сегодня русская и зарубежная классика, сказка и острая современная пьеса: "Бременские музыканты", "Спящая красавица", "Бемби", "Кот в сапогах" и многие другие.</p>
                     <p>В Нижегородской культурной жизни ТЮЗ уже давно занял прочное место. Он по праву вызывает интерес и любовь молодого зрителя, и серьезное внимание опытных театралов города.</p>
+                    <div class="spoiler piece" data-for="young_spectator_map">
+                        <div class="spoiler-header spoiler-header-inactive" data-name="Нижегородский театр юного зрителя на карте"></div>
+                        <div class="injection" id="young_spectator_map">
+                            <iframe class="iframe-injection" data-from="https://yandex.ru/map-widget/v1/-/CGxYFV-Q"></iframe>
+                        </div>
+                    </div>
                 </div>
                 <br>
             </div>
