--- a/centuries/xviii.html
+++ b/centuries/xviii.html
@@ -10,6 +10,7 @@
     <script>var topicName='XVIII век';var topicCategory='century';var topicId='xviii'</script>
     <script src="../js/common.js"></script>
     <script src="../js/topic.js"></script>
+    <script src="../js/spoiler.js"></script>
     <link rel="stylesheet" href="../css/topic.min.css">
     <title>XVIII век - Исторический зал</title>
 </head>
@@ -73,6 +74,12 @@
                     <p>В 1722 году, отправляясь в персидский поход, Нижний Новгород посещает Петр I и празднует свое 50-летие. За год до этого, в 1721 году  на епископскую кафедру был назначен архимандрит Кержебельмашского монастыря Питирим, основавший эллино-греческую и славяно-русскую церковные школы.</p>
                     <p>В 2014 году напротив Зачатьевской башни Нижегородского Кремля был открыт памятник Петру I</p>
                     <img data-label="Памятник Петру I в Нижнем Новгороде"/>
+                    <div class="spoiler piece" data-for="monument_map">
+                        <div class="spoiler-header spoiler-header-inactive" data-name="Памятник Петру I на карте"></div>
+                        <div class="injection" id="monument_map">
+                            <iframe class="iframe-injection" data-from="https://yandex.ru/map-widget/v1/-/CGxYBXJP"></iframe>
+                        </div>
+                    </div>
                     <p>В 1767 году город посетила императрица Екатерина II, но город ей не совсем понравился: <i>Сей город ситуацией прекрасен, но строением мерзок ... Всё — либо на боку лежит, либо близко того…</i></p>
                     <p>Во время своего пребывания в городе она познакомилась с известным нижегородским изобретателем-механиком Иваном Кулибиным. Впоследствии он был приглашён к императорскому двору.</p>
                     <p>После её визита был составлен новый регулярный план города, предусматривающий квартальную систему. С 1770 по 1913 годы была реконструирована улица Большая Покровская. Она стала постепенно застраиваться каменными домами. В 1798 году был построен первый городской театр, известный сегодня как Нижегородский театр драмы.</p>
