--- a/centuries/xx.html
+++ b/centuries/xx.html
@@ -10,6 +10,7 @@
     <script>var topicName='XX век';var topicCategory='century';var topicId='xx'</script>
     <script src="../js/common.js"></script>
     <script src="../js/topic.js"></script>
+    <script src="../js/spoiler.js"></script>
     <link rel="stylesheet" href="../css/topic.min.css">
     <title>XX век - Исторический зал</title>
 </head>
@@ -80,6 +81,12 @@
                     <p>Город был важным центром производства вооружений. Каждый второй автомобиль, каждый третий танк и каждая четвёртая артиллерийская установка были изготовлены на предприятиях города.</p>
                     <p>К 30-летию Победы у стен Кремля был открыт мемориал "Горьковчане - фронту".</p>
                     <img data-label="Мемориал &quot;Горьковчане - фронту&quot;"/>
+                    <div class="spoiler piece" data-for="memory_map">
+                        <div class="spoiler-header spoiler-header-inactive" data-name="Мемориал &quot;Горьковчане - фронту&quot; на карте"></div>
+                        <div class="injection" id="memory_map">
+                            <iframe class="iframe-injection" data-from="https://yandex.ru/map-widget/v1/-/CGxYBImD"></iframe>
+                        </div>
+                    </div>
                 </div>
                 <div class="chapter" id="after_war" data-chapter="После войны">
                     <p>После войны Горький стал значимым промышленным центром - здесь располагается ГАЗ - Горьковский автомобильный завод. В 1959 году город был закрыт для посещения иностранцами.</p>
