Пушкин на карте

--- a/stands/literary.html
+++ b/stands/literary.html
@@ -10,6 +10,7 @@
     <script>var topicName='Литературный Нижний';var topicCategory='stand';var topicId='literary'</script>
     <script src="../js/common.js"></script>
     <script src="../js/topic.js"></script>
+    <script src="../js/spoiler.js"></script>
     <link rel="stylesheet" href="../css/topic.min.css">
     <title>Литературный Нижний - Исторический зал</title>
 </head>
@@ -69,6 +70,12 @@
                 <div class="chapter" id="boldino_autmn" data-chapter="Болдинская осень А.С. Пушкина">
                     <p>Александр Сергеевич Пушкин по праву считается величайшим русским поэтом. За свою жизнь он написал более 800 произведений разных жанров, однако самая плодотворные его дни прошли в Нижнем Новгороде.</p>
                     <img data-label="Усадьба Пушкина в Болдино"/>
+                    <div class="spoiler piece" data-for="pushkin_map">
+                        <div class="spoiler-header spoiler-header-inactive" data-name="Музей-заповедник А.С. Пушкина в Болдино на карте"></div>
+                        <div class="injection" id="pushkin_map">
+                            <iframe class="iframe-injection" data-from="https://yandex.ru/map-widget/v1/-/CGxYFLNd"></iframe>
+                        </div>
+                    </div>
                     <p>В 1830 году, наа своей усадьбе в Большом Болдино, к поэту пришло вдохновение и он с невероятной быстротой создавал одно произведение за другим. Здесь он написал более 30 произведений, включая "Повести Белкина" и конец "Евгения Онегина". Пушкин пробует новые для себя жанры, но, к сожалению, не все из задуманного он успел осуществить.</p>
                     <p>Пушкин посвятил Нижнему Новгороду строки в произведении "Евгений Онегин":</p>
                     <div class="piece poem-piece">
