Теперь футер нормально приклеен к концу страницы

--- a/centuries/xvi.html
+++ b/centuries/xvi.html
@@ -80,6 +80,7 @@
                 <br>
             </div>
         </div>
+        <div class="mdl-layout-spacer"></div>
         <footer class="mdl-mini-footer">
             <div class="mdl-mini-footer__left-section">
                 <img class="mdl-logo mini-logo" src="../img/coat_of_arms.png" alt="Герб Нижегородской области">
