--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <br>
             </div>
         </div>
-        <br>
+        <div class="mdl-layout-spacer"></div>
         <footer class="mdl-mini-footer">
             <div class="mdl-mini-footer__left-section">
                 <img class="mdl-logo mini-logo" src="img/coat_of_arms.png" alt="Герб Нижегородской области">
